# zeeref

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  ZeeRef.spec  installer.iss  org.zeeref.ZeeRef.appdata.xml  pyproject.toml  setup.cfg  zeeref.desktop
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_appimage.yml  pytest.yml
beeref/: __main__.py  commands.py  items.py  main_controls.py  scene.py  view.py
beeref/actions/: actions.py  menu_structure.py
beeref/config/: controls.py  settings.py
beeref/fileio/: __init__.py  export.py  image.py  schema.py  scratch.py  snapshot.py  sql.py
beeref/widgets/: settings.py  welcome_overlay.py
commands/: zeeref.md
docs/: async-image-loading.md  rename-to-zeeref.md  scratch-file-architecture.md  tiled-image-storage.md
scripts/: generate-icons.sh
tests/: conftest.py  test_assets.py  test_commands.py  test_logging.py  test_main.py  test_scene.py  test_session.py  test_utils.py  test_view.py  utils.py
tests/actions/: test_actions.py  test_mixin.py
tests/assets/: test1item.zref
tests/config/: test_controls.py  test_settings.py
tests/fileio/: test_export.py  test_export_images_to_directory.py  test_export_scene_to_pixmap.py  test_export_scene_to_svg.py  test_image.py  test_init.py  test_scratch.py  test_sql.py
tests/items/: test_erroritem.py  test_items.py  test_pixmapitem.py  test_textitem.py
tests/selection/: test_base_item_mixin.py  test_multi_select_item.py  test_rubberband_item.py  test_selectable_mixin.py
tests/widgets/: test_color_gamut.py  test_settings.py  test_welcome_overlay.py  test_widgets.py
tests/widgets/controls/: test_controls.py  test_keyboard.py  test_mouse.py  test_mousewheel.py
tools/: build_appimage.py  find_linux_libs.py  linux_libs_notes.md
zeeref/: __main__.py  commands.py  constants.py  items.py  logging.py  main_controls.py  scene.py  selection.py  session.py  session_client.py  utils.py  view.py
zeeref/actions/: __init__.py  actions.py  menu_structure.py  mixin.py
zeeref/assets/: __init__.py  logo.icns
zeeref/config/: __init__.py  controls.py  settings.py
zeeref/fileio/: __init__.py  errors.py  export.py  image.py  io.py  schema.py  scratch.py  sql.py  thread.py  tilecache.py  tiling.py
zeeref/types/: snapshot.py  tile.py
zeeref/widgets/: __init__.py  color_gamut.py  common.py  debuglog.py  settings.py  welcome_overlay.py
zeeref/widgets/controls/: __init__.py  common.py  keyboard.py  mouse.py  mousewheel.py
