[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["beeref*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.png"]

[project]
name = "BeeRef"
version = "0.3.4-dev"
description = "A simple reference image viewer"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    { name = "Rebecca Breu", email = "rebecca@rbreu.de" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "Pillow>=10.0.0",
    "pyQt6-Qt6>=6.7.0,<=6.7.0",
    "pyQt6>=6.7.0,<=6.7.0",
    "mistune>=3.0.0",
    "rectangle-packer>=2.0.1,<=2.0.2",
]

[project.optional-dependencies]
# Kept in sync with requirements/*.txt so uv can install tooling via extras.
test = [
    "coverage==7.5.1",
    "httpretty==1.1.4",
    "pytest==8.2.0",
    "pytest-qt==4.4.0",
    "pytest-cov==5.0.0",
]
build = [
    "pyinstaller==6.6.0",
]
dev = [
    # -r test.txt
    "coverage==7.5.1",
    "httpretty==1.1.4",
    "pytest==8.2.0",
    "pytest-qt==4.4.0",
    "pytest-cov==5.0.0",
    # -r build.txt
    "pyinstaller==6.6.0",
    # Dev-only
    "ruff>=0.4.0",
    "pybadges==3.0.1",
    "yamllint==1.35.1",
]

[project.gui-scripts]
beeref = "beeref.__main__:main"

[project.urls]
Homepage = "https://beeref.org/"
Repository = "https://github.com/rbreu/beeref"
# Documentation =
Issues = "https://github.com/rbreu/beeref/issues"
Changelog = "https://github.com/rbreu/beeref/blob/main/CHANGELOG.rst"

[tool.ty.rules]
invalid-method-override = "ignore"